--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "Send to Telegram",
+  "name": "Send to Feishu",
   "version": "1.1.0",
-  "description": "A browser extension to send selected contents on web pages to Telegram via Telegram Bot API.",
+  "description": "A browser extension to send selected contents on web pages to Feishu via Feishu Bot API.",
   "permissions": ["contextMenus", "storage"],
   "background": {
     "service_worker": "./background.js",
